--- a/src/components/searchbar.scss
+++ b/src/components/searchbar.scss
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 600px; // Adjust as needed
     margin: 0 auto;
+    transition: width 0.5s; 
   }
   
   .searchbox__main {
